# SampleVRGame

./: CMakeLists.txt  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
hello_xr/: AndroidManifest.xml  AudioManager.h  Game.cpp  Game.hpp  GraphicsManager.hpp  GraphicsManager_Vulkan.cpp  GraphicsManager_Vulkan.hpp  GraphicsProvider.hpp  libimpl.cpp  main.cpp  utils.hpp  vk_impl_utils.hpp  vk_model.hpp  xr_linear.h
openxr_loader/include/openxr/: openxr.h
release/: output-metadata.json
src/debug/assets/: 0.glb  1.glb  2.glb  3.glb  4.glb  5.glb  6.glb  7.glb  8.glb  9.glb  GameStart.glb  GameStart_selected.glb  beam.glb  gun.glb  score.glb  score10.glb  score100.glb  score30.glb  score50.glb  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  sphere.glb  target.glb  test.txt  testcube.glb  time.glb
